# karcis-com-backend-rust

./: .env  .env.template  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
config/: default.toml  development.toml  production.toml
migrations/: 20240722025920_create_role_table.sql  20240722025927_create_users_table.sql  20240722033602_create_balance_table.sql  20240722165608_create_balance_histories_table.sql  20240722180255_create_revoked_token_table.sql  20240801085303_create_table_otp_codes.sql  20240805061429_create_hotels_table.sql  20240805062747_create_amenities_table.sql  20240813064502_create_hotel_amenities_table.sql  20240813065127_create_hotel_images_table.sql  20240815073713_create_room_types_table.sql  20240815074339_create_hotel_rooms_table.sql  20240815074906_create_room_amenities_table.sql  20240815075355_create_room_ratings_table.sql  20240815075926_create_room_prices_table.sql  20240815080359_create_room_images_table.sql  20240815080655_create_orders_table.sql  20240815081712_alter_user_table_to_add_soft_delete.sql
src/: db.rs  main.rs
src/api/: mod.rs
src/api/v1/handlers/: auth.rs
src/api/v1/routes/: auth.rs
src/app/: mod.rs  utils.rs
src/app/amenity/: mod.rs  models.rs  urls.rs  views.rs
src/app/auth/: errors.rs  helper.rs  mod.rs  models.rs  tests.rs  urls.rs  views.rs
src/app/balance/: models.rs  urls.rs  views.rs
src/app/mail_template/: forgot_password.rs  mod.rs
src/app/middlewares/: auth.rs  has_role.rs  mod.rs
src/app/otp/: models.rs
src/app/user/: urls.rs  views.rs
src/app/utils/: filesystem.rs  generator.rs  mail.rs  mod.rs  standard_response.rs  token_signing.rs
src/config/: database.rs  email.rs  jwt.rs  mod.rs  server.rs
src/domain/: errors.rs  mod.rs
src/domain/middlewares/: auth.rs
src/domain/models/: auth.rs  mod.rs  otp.rs  token.rs  user.rs
src/domain/services/: auth.rs  mod.rs  otp.rs  token.rs  user.rs
src/domain/validations/: auth_validations.rs  mod.rs
src/infrastructure/: email.rs  mod.rs
src/infrastructure/database/: mod.rs  postgres.rs
src/infrastructure/database/migrations/: mod.rs
src/infrastructure/database/repositories/: mod.rs  user_repository.rs
src/infrastructure/email_template/: forgot_password.rs  mod.rs
src/shared/utils/: error_helpers.rs  generator.rs  mod.rs  standard_response.rs  token_signing.rs
