[package]
name = "karcis-com-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
bcrypt = "0.15.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.18"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rust_decimal = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
sqlx = {version = "0.8.0", features = [ "postgres", "runtime-tokio", "macros", "chrono", "json"]}
