[package]
name = "karcis-com-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.8.0"
bcrypt = "0.17"
bigdecimal = {version = "0.4.5", features = [ "serde-json" ]}
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
derive_more = "2.0.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
lettre = "0.11"
log = "0.4.22"
rand = "0.9.1"
regex = "1.11.1"
rust_decimal = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
sqlx = {version = "0.8.0", features = [ "postgres", "runtime-tokio", "tls-rustls", "macros", "chrono", "json", "bigdecimal"]}
tokio = {version="1.39.2", features=["macros", "rt-multi-thread", "fs"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.77"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"
anyhow = "1.0"
